Added addBook function with basic array editing functionality.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Library</title>
 </head>
 <body>
-    
+    <button id="add">Add Book</button>
 
     <script src="script.js"></script>
 </body>
