--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Library</title>
 </head>
 <body>
+    <header>
+        <h1>Apocrypha</h1>
+        <h3>A personal library app</h3>
+    </header>
     <button id="add">Add Book</button>
 
     <script src="script.js"></script>
