Added shelf section.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
         <h1>Apocrypha</h1>
         <h3>A personal library app</h3>
     </header>
-    <button id="add">Add Book</button>
+    
+    <main>
+        <button id="add">Add Book</button>
+        <section id="shelf">
+            
+        </section>
+    </main>
 
     <script src="script.js"></script>
 </body>
