Created for loop to create and display array content.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <main>
         <button id="add">Add Book</button>
         <section id="shelf">
-            
+            <div class="card">
+                <p>Title: </p>
+                <p>Author: </p>
+                <p>Pages: </p>
+                <p>Read Status: </p>
+            </div>
         </section>
     </main>
 
