Updated loop to correctly display all array content to the correct elements.

--- a/index.html
+++ b/index.html
@@ -14,14 +14,7 @@
     
     <main>
         <button id="add">Add Book</button>
-        <section id="shelf">
-            <div class="card">
-                <p>Title: </p>
-                <p>Author: </p>
-                <p>Pages: </p>
-                <p>Read Status: </p>
-            </div>
-        </section>
+        <section id="shelf"></section>
     </main>
 
     <script src="script.js"></script>
