--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Apocrypha</h1>
-        <h3>A personal library app</h3>
+        <h3>Your personal library.</h3>
     </header>
     
     <main>
