Changed styling of background and book cards.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     
     <main>
-        <button id="add">Add Book</button>
+        <button id="add">+</button>
         <section id="shelf"></section>
     </main>
 
