--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Apocrypha</h1>
+        <h1>APOCRYPHA</h1>
         <h5 class="sub">Your personal library.</h5>
     </header>
     
