Changed prompt to dialog form for data collection.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                         <option value="No">No</option>
                     </select>
                 </div>
+                <button type="submit" id="submit">Submit</button>
+                <button id="close">Close</button>
             </form>
         </dialog>
         <section id="shelf"></section>
