--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <div>
                     <label for="read">Read status:</label>
                     <select name="read" id="read">
-                        <option value="Yes">Read</option>
-                        <option value="No">Not Read</option>
+                        <option value="Read">Read</option>
+                        <option value="Not Read">Not Read</option>
                     </select>
                 </div>
                 <button type="submit" id="submit">Submit</button>
