--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="/assets/ApocryphaLogo.png" alt="Apocrypha Logo" id="logo">
         <h1>APOCRYPHA</h1>
         <h5 class="sub">Your personal library.</h5>
     </header>
